# proc-macro-workshop

./: .gitignore  Cargo.toml  devenv.nix  main.rs
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: 07-repeated-field.rs
debug/: Cargo.toml  devenv.nix
debug/src/: lib.rs
debug/tests/: 04-type-parameter.rs  07-associated-type.rs  progress.rs
seq/: Cargo.toml  devenv.nix
seq/src/: lib.rs
seq/tests/: progress.rs
